# BI3_Submission

./: LICENSE  README.md  pyproject.toml
data/report/: experiment_report.tex
src/: Realestate_Portugal.ipynb
