[project]
name = "assignment3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "plotly>=6.5.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "starvers",
    "xgboost>=3.1.3",
]

[tool.uv.sources]
starvers = { git = "https://github.com/GreenfishK/starvers.git" }
